# design

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: errors.h  palette.h  utils.h  work.h
src/: errors.cpp  palette.cpp  utils.cpp  work.cpp
